--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   "require": {
     "vlucas/phpdotenv": "^5.6",
     "firebase/php-jwt": "^6.10",
-    "tecnickcom/tcpdf": "^6.7"
+    "tecnickcom/tcpdf": "^6.7",
+    "ramsey/uuid": "^4.8"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
