--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
   "homepage": "https://github.com/elliotfern/elliotfern-intranet#readme",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "leaflet": "^1.9.4",
+    "process": "^0.11.10",
     "quill": "^2.0.3",
     "tinymce": "^7.6.1",
-    "trix": "^2.1.15"
+    "trix": "^2.1.15",
+    "util": "^0.12.5"
   }
 }
