--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "vlucas/phpdotenv": "^5.6",
     "firebase/php-jwt": "^6.10",
     "tecnickcom/tcpdf": "^6.7",
-    "ramsey/uuid": "^4.8"
+    "ramsey/uuid": "^4.8",
+    "phpmailer/phpmailer": "^6.10"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
