--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "allowJs": true,
     "outDir": "./dist",
     "rootDir": "./src/",
-    "lib": ["es2017", "dom"],
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "forceConsistentCasingInFileNames": true,
     "typeRoots": ["./node_modules/@types", "src/frontend/types"]
       },
