--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,55 +1,74 @@
-name: Deploy Elliot.cat frontend
+name: Deploy Elliot.cat legacy (full sync + build + composer)
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout del código fuente actualizado
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # 2. Configurar la clave SSH para el servidor
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.5.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          node-version: '18'
+          cache: 'npm'
 
-      # 3. Configurar Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
+      - name: Install dependencies (npm)
+        run: npm ci
 
-      # 4. Instalar dependencias
-      - name: Install npm dependencies
-        run: npm install
-
-      # 5. Actualizar el número de versión en el bundle
       - name: Bump version in footer-end.php
         run: node bump-version.cjs
 
-      # 6. Construir el frontend
       - name: Build frontend assets
         run: npm run build
 
-      # 7. Agregar el servidor a known_hosts
+      - name: Start SSH agent
+        uses: webfactory/ssh-agent@v0.8.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
       - name: Add server to known_hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H 87.98.230.129 >> ~/.ssh/known_hosts
 
-      # 8. Subir `dist/` al servidor
-      - name: Upload built dist/ assets
+      - name: Sync project to shared hosting (rsync)
         run: |
-          scp -r dist/* epgylzqu@87.98.230.129:/home/epgylzqu/elliotfern.com/dist/
+          set -euo pipefail
 
-      # 9. Subir `footer-end.php` actualizado
-      - name: Upload updated footer-end.php
+          REMOTE="epgylzqu@87.98.230.129"
+          REMOTE_DIR="/home/epgylzqu/elliotfern.com/"
+
+          rsync -az --delete \
+            --chmod=Du=rwx,Dgo=rx,Fu=rw,Fgo=r \
+            --exclude ".git/" \
+            --exclude ".github/" \
+            --exclude "node_modules/" \
+            --exclude ".env" \
+            --exclude ".env.*" \
+            --exclude "var/" \
+            --exclude "*.log" \
+            -e "ssh" \
+            ./ "$REMOTE:$REMOTE_DIR"
+
+      - name: Composer install on server
         run: |
-          scp public/includes/footer-end.php epgylzqu@87.98.230.129:/home/epgylzqu/elliotfern.com/public/includes/footer-end.php
+          set -euo pipefail
+
+          ssh epgylzqu@87.98.230.129 "bash -lc '
+            set -euo pipefail
+            cd /home/epgylzqu/elliotfern.com
+
+            command -v composer >/dev/null 2>&1 || { echo \"ERROR: composer no está instalado\"; exit 3; }
+
+            # si es prod típico:
+            composer install --no-dev --prefer-dist --optimize-autoloader
+
+            # opcional si usas plugins y te da guerra en shared hosting:
+            # composer install --no-dev --prefer-dist --optimize-autoloader --no-interaction
+          '"
